@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-20T02:33:24Z",
+  "timestamp" : "2022-09-20T16:35:55Z",
   "count_outdated" : 786,
   "uniques_outdated" : 411,
-  "count" : 810,
-  "uniques" : 424,
+  "count" : 811,
+  "uniques" : 425,
   "clones" : [
     {
       "timestamp": "2022-09-07T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-09-19T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
