@@ -1,3 +1,11 @@
+2022-09-20T16:35:55Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3091842738
+* notice: last 14d: unq all: 1 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 411 786 / 424 810
+* notice: next accum: outdated-unq outdated-all / unq all: 411 786 / 425 811
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-20]
+
 2022-09-20T02:33:24Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3087027295
 * notice: last 14d: unq all: 1 24
